--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -8,6 +8,10 @@ html
     = stylesheet_link_tag 'application', media: 'all'
     = javascript_include_tag 'application'
   body
+  - if logged_in?
     = render 'shared/header'
-    = render 'shared/flash_messages'
+  - else
+    = render 'shared/before_login_header'
+  = render 'shared/flash_messages'
+  main
     = yield
