--- a/app/views/posts/_post.html.slim
+++ b/app/views/posts/_post.html.slim
@@ -5,17 +5,17 @@
       = post.user.username
       - if current_user&.own?(post)
         .ml-auto
-          = link_to '#', class: 'mr-3', method: :delete, data: { confirm: '本当に削除しますか？' } do
+          = link_to post_path(post), class: 'mr-3', method: :delete, data: { confirm: '本当に削除しますか？' } do
             = icon 'far', 'trash-alt', class: 'fa-lg'
-          = link_to '#' do
+          = link_to edit_post_path(post) do
             = icon 'far', 'edit', class: 'fa-lg'
-  = link_to '#' do
-  .swiper-container
-    .swiper-wrapper
-      - post.images.each do |image|
-        .swiper-slide
-          = image_tag image.url, class: 'card-img-top'
-    .swiper-pagination
+  = link_to post_path(post) do
+    .swiper-container
+      .swiper-wrapper
+        - post.images.each do |image|
+          .swiper-slide
+            = image_tag image.url, class: 'card-img-top'
+      .swiper-pagination
   .card-body
     .card-text
       = post.body
