[Add] コメントのCRUD実装

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -15,5 +15,6 @@ html
   = render 'shared/flash_messages'
   main
     = yield
+    = render 'shared/modal'
   - if Rails.env.development?
     = debug(params)
