--- a/app/views/posts/index.html.slim
+++ b/app/views/posts/index.html.slim
@@ -1,18 +1,22 @@
 .container
   .row
     .col-md-8.col-12
-     = render @posts
-     = paginate @posts
+      - if @posts.present?
+        = render @posts
+      - else
+        .text-center.font-weight-bold
+          | 投稿がありません
+      = paginate @posts
     .col-md-4.col-12
-     - if logged_in?
-       .profile-box.mb-3
-         = image_tag 'profile-placeholder.png', size: '50x50', class: 'rounded-circle mr-1'
-         = current_user.username
-     .users-box
-       .card
-         .card-header
-           | ユーザー
-         .card-body
-          = render @users
-         .card-footer
-          = link_to 'すべて見る', users_path
+      - if logged_in?
+        .profile-box.mb-3
+          = image_tag 'profile-placeholder.png', size: '50x50', class: 'rounded-circle mr-1'
+          = current_user.username
+      .users-box
+        .card
+          .card-header
+            | ユーザー
+          .card-body
+            = render @users
+          .card-footer
+            = link_to 'すべて見る', users_path
