--- a/app/views/posts/index.html.slim
+++ b/app/views/posts/index.html.slim
@@ -10,7 +10,7 @@
     .col-md-4.col-12
       - if logged_in?
         .profile-box.mb-3
-          = image_tag 'profile-placeholder.png', size: '50x50', class: 'rounded-circle mr-1'
+          = image_tag current_user.avatar.url, size: '50x50', class: 'rounded-circle mr-1'
           = current_user.username
       .users-box
         .card
