--- a/app/views/posts/index.html.slim
+++ b/app/views/posts/index.html.slim
@@ -11,7 +11,7 @@
       - if logged_in?
         .profile-box.mb-3
           = image_tag current_user.avatar.url, size: '50x50', class: 'rounded-circle mr-1'
-          = current_user.username
+          = link_to current_user.username, edit_mypage_account_path
       .users-box
         .card
           .card-header
